--- a/source/scss/variables.scss
+++ b/source/scss/variables.scss
@@ -9,4 +9,7 @@ $color-first: #a07b50;
 $color-second: #ddd0c3;
 $color-footer: #fdf2e6;
 
-$desctop: 1366px;
+$desktop: 1366px;
+$min-desktop: 980px;
+$tablet: 768px;
+$mobile: 320px;
