--- a/source/scss/blocks/header.scss
+++ b/source/scss/blocks/header.scss
@@ -1,7 +1,7 @@
 .header {
     position: relative;
-    background: $bgdark url('../img/HeaderCat.png') no-repeat 100% 100%;
-    height: 100vh;
+    padding-left: 40px;
+    background: $bgdark;
 
     &__wrapper {
         display: flex;
@@ -36,5 +36,96 @@
         width: 280px;
         font-size: 16px;
         line-height: 24px;
+    }
+
+    &__cat {
+        position: absolute;
+        bottom: 0;
+    }
+}
+
+@media (min-width: $desktop) {
+    .header {
+        height: 684px;
+        
+        &__cat {
+            right: -25px;
+        }
+    }
+}
+
+@media (max-width: $desktop) and (min-width: $min-desktop + 1) {
+    .header {
+        overflow: hidden;
+        height: 684px;
+
+        &__cat {
+            // width: 80%;
+            left:42%;
+        }
+    }
+}
+
+@media (max-width: $min-desktop) and (min-width: $tablet) {
+    .header {
+        overflow: hidden;
+        padding-top: 70px;
+        height: 595px;
+
+        &__logo {
+            top: 30px;
+        }
+
+        &__cat {
+            height: 535px;
+            width: auto;
+            left: 40%;
+        }
+    }
+}
+
+@media (max-width: $tablet - 1) and (min-width: $mobile) {
+    .header {
+        overflow: hidden;
+        padding-left: 40px;
+        padding-right: 40px;
+        padding-top: 100px;
+        min-height: 617px;
+        text-align: center;
+
+        &__wrapper {
+            max-width: 250px;
+        }
+
+        &__subtitle,
+        &__title {
+            width: 250px;
+        }
+
+        &__logo {
+            top: 30px;
+        }
+
+        &__city,
+        &__subtitle {
+            font-size: 14px;
+            line-height: 20px;
+        }
+
+        &__subtitle {
+            margin-bottom: 35px;
+        }
+
+        &__title {
+            margin: 15px 0;
+            font-size: 36px;
+            line-height: 42px;
+        }
+
+        &__cat {
+            width: 320px;
+            left: 50%;
+            transform: translateX(-50%);
+        }
     }
 }
