--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -1,4 +1,6 @@
 @import 'variables.scss';
 @import "global.scss";
 @import "blocks/button.scss";
+@import "blocks/footer.scss";
 @import "blocks/header.scss";
+@import "blocks/social.scss";
