--- a/source/scss/variables.scss
+++ b/source/scss/variables.scss
@@ -9,6 +9,12 @@ $color-first: #a07b50;
 $color-second: #ddd0c3;
 $color-footer: #fdf2e6;
 
+$font-size-s: 12px;
+$font-size-m: 14px;
+$font-size-l: 16px;
+$font-size-xl: 36px;
+$font-size-xxl: 52px;
+
 $desktop: 1366px;
 $min-desktop: 980px;
 $tablet: 768px;
