--- a/source/scss/blocks/footer.scss
+++ b/source/scss/blocks/footer.scss
@@ -15,9 +15,9 @@
 
     &__social {
         text-align: center;
-        display: flex;
-        list-style: none;
-        padding: 0;
+        // display: flex;
+        // list-style: none;
+        // padding: 0;
     }
 
     &__address {
