--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -1,6 +1,9 @@
 @import 'variables.scss';
+@import 'container.scss';
 @import "global.scss";
+@import "title.scss";
 @import "blocks/button.scss";
 @import "blocks/footer.scss";
 @import "blocks/header.scss";
+@import "blocks/pets.scss";
 @import "blocks/social.scss";
