--- a/source/scss/variables.scss
+++ b/source/scss/variables.scss
@@ -12,8 +12,9 @@ $color-footer: #fdf2e6;
 $font-size-s: 12px;
 $font-size-m: 14px;
 $font-size-l: 16px;
-$font-size-xl: 36px;
-$font-size-xxl: 52px;
+$font-size-subtitle-mobile: 28px;
+$font-size-subtitle: 36px;
+$font-size-title: 52px;
 
 $desktop: 1366px;
 $min-desktop: 980px;
