--- a/source/scss/blocks/header.scss
+++ b/source/scss/blocks/header.scss
@@ -2,6 +2,7 @@
     position: relative;
     padding-left: 40px;
     background: $bgdark;
+    overflow: hidden;
 
     &__wrapper {
         display: flex;
