--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -3,6 +3,7 @@
 @import "global.scss";
 @import "title.scss";
 @import "blocks/button.scss";
+@import "blocks/features.scss";
 @import "blocks/footer.scss";
 @import "blocks/header.scss";
 @import "blocks/pets.scss";
