--- a/source/scss/blocks/header.scss
+++ b/source/scss/blocks/header.scss
@@ -47,7 +47,7 @@
 
 @media (min-width: $desktop) {
     .header {
-        height: 684px;
+        height: 100vh;
         
         &__cat {
             right: -25px;
