--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -2,6 +2,7 @@
 @import 'container.scss';
 @import "global.scss";
 @import "title.scss";
+@import "blocks/aboutUs.scss";
 @import "blocks/button.scss";
 @import "blocks/features.scss";
 @import "blocks/footer.scss";
