--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -4,6 +4,7 @@
 @import "title.scss";
 @import "blocks/aboutUs.scss";
 @import "blocks/button.scss";
+@import "blocks/care.scss";
 @import "blocks/features.scss";
 @import "blocks/footer.scss";
 @import "blocks/header.scss";
