--- a/source/scss/blocks/footer.scss
+++ b/source/scss/blocks/footer.scss
@@ -15,6 +15,10 @@
 
     &__social {
         text-align: center;
+
+        svg {
+            fill: $color-first;
+        }
     }
 
     &__address {
