--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -9,4 +9,5 @@
 @import "blocks/footer.scss";
 @import "blocks/header.scss";
 @import "blocks/pets.scss";
+@import "blocks/team.scss";
 @import "blocks/social.scss";
