--- a/source/scss/variables.scss
+++ b/source/scss/variables.scss
@@ -12,6 +12,8 @@ $color-footer: #fdf2e6;
 $font-size-s: 12px;
 $font-size-m: 14px;
 $font-size-l: 16px;
+$font-size-name-mobile: 18px;
+$font-size-name: 24px;
 $font-size-subtitle-mobile: 28px;
 $font-size-subtitle: 36px;
 $font-size-title: 52px;
