answers without adaptiv

--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -3,6 +3,7 @@
 @import "global.scss";
 @import "title.scss";
 @import "blocks/aboutUs.scss";
+@import "blocks/answers.scss";
 @import "blocks/button.scss";
 @import "blocks/care.scss";
 @import "blocks/features.scss";
