--- a/source/scss/blocks/button.scss
+++ b/source/scss/blocks/button.scss
@@ -43,7 +43,6 @@
     background-size: contain;
     background-repeat: no-repeat;
     transition: 0.3s;
-    opacity: 0.5;
 
     &--left {
         background-image: url(../img/icons/sliderLeft.svg);
@@ -52,15 +51,50 @@
     &--right {
         background-image: url(../img/icons/sliderRight.svg);
     }
-
-    &:hover,
-    &:focus {
-        opacity: 1;
-        outline: none;
-    }
-
-    &:active {
-        opacity: 0.7;
-    }
     
+}
+
+@media (min-width: $tablet + 1) {
+    .button__arrow {
+        opacity: 0.5;
+        
+        &:hover,
+        &:focus {
+            opacity: 1;
+            outline: none;
+        }
+    
+        &:active {
+            opacity: 0.7;
+        }
+    }
+}
+
+@media (min-width: $mobile) and (max-width: $tablet) {
+    .button {
+        &__arrow {
+            width: 8px;
+            height: 18px;
+            opacity: 1;
+
+            &:hover,
+            &:focus {
+                opacity: 0.7;
+                outline: none;
+            }
+
+            &:active {
+                opacity: 1;
+            }
+        }
+    }
+}
+
+@media (min-width: $mobile) and (max-width: $tablet - 1) {
+    .button {
+        &__arrow {
+            width: 8px;
+            height: 18px;
+        }
+    }
 }
