--- a/source/scss/blocks/answers.scss
+++ b/source/scss/blocks/answers.scss
@@ -1,5 +1,4 @@
 .answers {
-    padding: 75px 40px 80px;
 
     &__title {
         margin-bottom: 20px;
@@ -17,26 +16,17 @@
         counter-reset: num;
         padding: 0;
         margin: 0 auto;
-        max-width: 800px;
         color: $color-second;
         line-height: 24px;
     }
 
     &__item {
         position: relative;
-        left: 50px;
-
-        &:not(:last-child) {
-            margin-bottom: 38px;
-        }
 
         &:before {
             position: absolute;
             content: '0' counter(num);
             counter-increment: num;
-            top: 50px;
-            left: -110px;
-            font-size: 70px;
             font-weight: 700;
             color: $color-first;
         }
@@ -69,9 +59,10 @@
 
     &__question {
         position: relative;
-        padding: 45px 150px 45px 42px;
         border: 0.5px solid rgba($color-first, 0.4);
         font-weight: 500;
+        display: flex;
+        align-items: center;
         
         &:hover,
         &:focus {
@@ -92,9 +83,10 @@
         top: 0;
         bottom: 0;
         right: 0;
-        width: 104px;
         background-color: transparent;
         border-top: none;
+        border-right: none;
+        border-bottom: none;
         outline: none;
         border-left: 0.5px solid rgba($color-first, 0.4);
         cursor: pointer;
@@ -126,7 +118,122 @@
         border-left: 0.5px solid rgba($color-first, 0.4);
         border-right: 0.5px solid rgba($color-first, 0.4);
         border-bottom: 0.5px solid rgba($color-first, 0.4);
-        padding: 30px 200px 40px 42px;
         font-weight: 300;
+    }
+}
+
+@media (min-width: $min-desktop + 1) {
+    .answers {
+        padding: 75px 40px 80px;
+
+        &__list {
+            width: 800px;
+        }
+
+        &__item {
+            transform: translateX(50px);
+    
+            &:not(:last-child) {
+                margin-bottom: 38px;
+            }
+
+            &:before {
+                top: 50px;
+                left: -110px;
+                font-size: 70px;
+            }
+        }
+
+        &__question {
+            padding: 45px 150px 45px 42px;
+        }
+
+        &__button {
+            width: 104px;
+        }
+
+        &__answer {
+            padding: 30px 200px 40px 42px;
+        }
+    }
+}
+
+@media (max-width: $min-desktop) and (min-width: $tablet) {
+    .answers {
+        padding: 135px 55px 125px 105px;
+
+        &__item {
+            transform: translateX(10px);
+
+            &:before {
+                top: 28px;
+                left: -80px;
+                font-size: 50px;
+            }
+
+            &:not(:last-child) {
+                margin-bottom: 25px;
+            }
+        }
+
+        &__question {
+            min-height: 77px;
+            padding: 14px 140px 14px 30px;
+        }
+
+        &__button {
+            width: 73px;
+        }
+
+        &__answer {
+            padding: 10px 140px 10px 30px;
+        }
+    }
+}
+
+@media (max-width: $tablet - 1) {
+    .answers {
+        padding: 60px 15px;
+
+        &__title {
+            margin-bottom: 30px;
+            font-size: 28px;
+        }
+    
+        &__subtitle {
+            margin-bottom: 40px;
+            max-width: 180px;
+            font-size: 14px;
+            line-height: 20px;
+            font-weight: 300;
+        }
+
+        &__item {
+    
+            &:not(:last-child) {
+                margin-bottom: 30px;
+            }
+
+            &:before {
+                display: none;
+            }
+        }
+
+        &__question {
+            padding: 10px 55px 10px 15px;
+            min-height: 60px;
+            font-size: 14px;
+            line-height: 20px;
+        }
+
+        &__answer {
+            padding: 10px 25px 10px 15px;
+            font-size: 14px;
+            line-height: 20px;
+        }
+
+        &__button {
+            width: 43px;
+        }
     }
 }
