--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -10,5 +10,6 @@
 @import "blocks/footer.scss";
 @import "blocks/header.scss";
 @import "blocks/pets.scss";
+@import "blocks/recall.scss";
 @import "blocks/team.scss";
 @import "blocks/social.scss";
