--- a/source/scss/blocks/team.scss
+++ b/source/scss/blocks/team.scss
@@ -12,6 +12,17 @@
         background-color: $bglight;
     }
 
+    &__block-content {
+        display: none;
+        transition: opacity 0.3s;
+        opacity: 0;
+    }
+
+    &__block-content--active {
+        display: block;
+        opacity: 1;  
+    }
+
     &__name {
         margin-bottom: 10px;
         font-size: $font-size-name;
@@ -23,8 +34,17 @@
         font-weight: 300;
     }
 
-    &__photo {
+    &__photo-wrapper {
         position: absolute;
+        overflow: hidden;
+        width: 360px;
+        height: 356px;
+    }
+
+    &__photo-inner {
+        display: flex;
+        transform: translateX(0);
+        transition: 0.3s;
     }
 
     &__social svg {
@@ -73,7 +93,7 @@
     .team {
         padding: 80px 185px 70px;
 
-        &__photo {
+        &__photo-wrapper {
             left: -332px;
             top: -26px;
         }
@@ -101,10 +121,16 @@
     .team {
         padding: 80px 50px 195px;
 
-        &__photo {
+        &__photo-wrapper {
             width: 208px;
+            height: 205px;
             bottom: -120px;
             right: 30px;
+        }
+
+        &__photo {
+            width: 208px;
+            height: 205px;
         }
 
         &__button {
@@ -140,11 +166,17 @@
             line-height: 20px;
         }
 
-        &__photo {
+        &__photo-wrapper {
             width: 126px;
+            height: 125px;
             top: -63px;
             left: 50%;
             transform: translateX(-50%);
+        }
+
+        &__photo {
+            width: 126px;
+            height: 125px;
         }
 
         &__block {
