--- a/source/scss/blocks/answers.scss
+++ b/source/scss/blocks/answers.scss
@@ -68,6 +68,7 @@
         font-weight: 500;
         display: flex;
         align-items: center;
+        cursor: pointer;
         
         &:hover,
         &:focus {
