--- a/source/scss/style.scss
+++ b/source/scss/style.scss
@@ -1,7 +1,9 @@
+@import 'fonts.scss';
 @import 'variables.scss';
 @import 'container.scss';
 @import "global.scss";
 @import "title.scss";
+@import "blocks/social.scss";
 @import "blocks/aboutUs.scss";
 @import "blocks/answers.scss";
 @import "blocks/button.scss";
@@ -12,4 +14,3 @@
 @import "blocks/pets.scss";
 @import "blocks/recall.scss";
 @import "blocks/team.scss";
-@import "blocks/social.scss";
